<resources>
    <string name="app_name">Taccolation</string>
    <string name="action_notification">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Main App Dashboard</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Register</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="empty_input_text_error">field cannot be empty</string>
    <string name="password_mismatch">password do not match</string>
    <string name="resend_email">Kindly check your mailbox to verify your email</string>
    <string name="failed_authentication">An error occurred. please try again</string>
    <string name="unauthenticated_user">Login with your credentials or register if you haven\'t</string>
    <string name="register_route_button_text">Don\'t have an account? Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_password_recovery">Send Link</string>
    <string name="cancel_password_recovery">Cancel</string>
    <string name="reset_info_text">A password reset link would be sent to your registered email address</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="invalid_credentials">Invalid login credentials</string>
    <string name="internet_error">Check your internet connection and try again.</string>


    <string name="teacher_profile">Teacher Profile</string>
    <string name="student_profile"> Student Profile</string>
    <string name="assessment">Assessment</string>
    <string name="slides">Lecture Aids</string>
    <string name="add_student">Add Student</string>
    <string name="attendance">Attendance</string>
    <string name="report">Report sheet</string>
    <string name="leaderboard">Leader Board</string>
    <string name="dashboard_icon_desc">dashboard icon</string>
    <string name="update_profile">update profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="icon_description">Icon Description</string>
    <string name="attendance_percentage">Attendance Percentage</string>
    <string name="quiz_completed">Quiz Completed</string>
    <string name="test_mark">Test Mark</string>
    <string name="exam_mark">Exam Mark</string>
    <string name="bonus_mark">Bonus Mark</string>
    <string name="rewards_received">Rewards Received</string>
    <string name="reg_success">Registration successful!</string>
    <string name="app_sub_title">Become the best as a teacher</string>
    <string name="let_s_go">Tap to Proceed</string>
    <string name="app_summary_text">Taccolation offers
teachers the platform to manage students records in an efficient manner. It increases Teacher’s
productivity as usual manual work such as attendance, lecture notes, assessments, reports are now automated.
        It offers a platform where student’s information can better be managed
thereby giving the teacher an idea on aspects to improve and also aspects to impact more in the
student’s life.</string>
    <string name="hero_image">Hero image</string>
    <string name="have_an_account_log_in">Have an account? Log In</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="line_separator">line separator</string>
    <string name="activities">Activities</string>
    <string name="change_teacher_image_button">Change Teacher Image button</string>
    <string name="toolbar_title">Add Student</string>
    <string name="select_courses">Select Courses</string>
    <string name="sex">Sex</string>
    <string name="rewards_title">Rewards</string>
    <string name="reward">Reward</string>
    <string name="select_reward">Select Reward:</string>
    <string name="teacher_update_task_success">Your details has been updated successfully</string>
    <string name="student_add_task_success">Student added successfully</string>
    <string name="teacher_update_task_failed">An error occurred. please try again</string>
    <string name="student_add_task_failed">An error occurred. please try again</string>
    <string name="reward_student">Reward Student</string>
    <string name="rating_comment">Successfully completed all assignments with a rating of %d stars</string>
    <string name="rating">%d stars</string>
    <string name="task_title">Tasks</string>
    <string name="teacher_notes">Teacher Notes</string>
    <string name="error_placeholder_image">error placeholder image</string>
    <string name="select_course">Select Courses</string>
    <string name="lecture_aids">Lecture Aids</string>
    <string name="teacher">Teacher</string>
    <string name="student_details">Student Details</string>
    <string name="upload_from_gallery">upload from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="no_camera_error">No camera application found</string>
    <string name="error_creating_file">Failed to create image file. Try again</string>
    <string name="error_accessing_file">Failed to access image from gallery</string>

    <!--Preferences Screen Keys-->
    <string name="theme_key">theme</string>
    <string name="animation_key">animation</string>
    <string name="no_notification_message">Looks like you have no notifications for now</string>
    <string name="rank_title">Rank</string>
    <string name="username_title">Username</string>
    <string name="points_earned_title">Points</string>
    <string name="search_bar_title">Search…</string>
    <string name="search_no_match">No matches found for \'%s\'</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="designation_tv">Designation</string>
    <string name="address_text_hint">Address</string>
    <string name="hello">Hello</string>
    <string name="messages">Messages</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="leader_board">LeaderBoard</string>
    <string name="docs_upload">Select the documents from storage</string>
    <string name="file_types">PNG, JPEG, DOC or PDF</string>
    <string name="upload_text">Create/Upload your Lecture Notes</string>
    <string name="or">OR</string>
    <string name="upload_text_next">Paste the link to the Teaching Aids</string>
    <string name="proceed">Proceed</string>
    <string name="enter_text">Enter Text</string>
    <string name="create_new_document">Create new document</string>
    <string name="create_link">Paste Document Link</string>
    <string name="delete_button">Delete button</string>
    <string name="upload_button">File Upload Button</string>
    <string name="link_upload_button">Link Upload Button</string>
    <string name="create_new_document_button">Create New Document Button</string>
    <string name="select_the_course_associated_with_this_file">Select the course associated with this file</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="no_user_record">No records found. Please register if you haven\'t</string>
    <string name="select_course_hint">Select at least a course you teach</string>
    <string name="no_student_has_registered_for_this_course">No student has registered for this course</string>
    <string name="email_in_use">The email address is already in use by another account</string>
    <string name="login_fragment_label">LoginFragment</string>
    <string name="register_fragment_label">RegisterFragment</string>
    <string name="password_too_short">Password should be at least 6 characters</string>
    <string name="updating_profile_tv">Updating…</string>
    <string name="no_changes_made">No changes was made</string>
    <string name="chooser_title">Open this file with</string>
    <string name="no_app_found_intent">No application found to open this file</string>
    <string name="share_button">Share Button</string>
    <string name="open_button">Open Button</string>
    <string name="are_you_sure">Are you sure you want to delete\n\'%s\' ?</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="share_file_chooser_title">Share file with:</string>
    <string name="uri">android://collocation.com</string>
</resources>