<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/hero_image"
        android:src="@drawable/onboarding"
        app:layout_constraintBottom_toTopOf="@id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_title"
        style="@style/Widget.MyApp.MaterialTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_sub_title"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintBottom_toTopOf="@id/app_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_summary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/on_margin_top"
        android:layout_marginBottom="@dimen/on_margin_top"
        android:background="@drawable/rect_bg"
        android:ellipsize="end"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:padding="@dimen/item_padding"
        android:text="@string/app_summary_text"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/launch_auth_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/launch_auth_screen"
        style="@style/Widget.MyApp.MaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/let_s_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>